--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  /* align-items: center; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +8,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  height: 100vh;
+  width: 100vw;
+  /* height: 80%;  */
+  /* display: flex;  */
+    /* justify-content: center;
+  align-items: center; */
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  /* height: 100vh;
+  width: 100vw; */
+  /* padding: 10px; */
+  background: #1A181B;
+  color: #564D65;
+  /* background: #419be0; */
 }
