--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 .App {
   /* width: 100%; */
   /* height: 100%; */
-  text-align: center;
+  /* text-align: center; */
 }
 
 /* .App-logo {
@@ -28,13 +28,13 @@
   /* position: relative;   */
 }
 
-.App-header > div {
+/* .App-header > div { */
   /* background-color: #f1f1f1; */
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   /* margin: 10px;
   padding: 10px; */
-  font-size: 30px; 
+  /* font-size: 30px;  */
   
   /* margin: 0;
   position: absolute;
@@ -45,9 +45,9 @@
   /* display: flex;
   justify-content: center;
   align-items: center;     */
-}
+/* } */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -55,7 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
 /* @keyframes App-logo-spin {
   from {
