--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,7 +10,11 @@
     background-color: #0066FF;
 }
 
-.homecenter > p {
+div {
+    height: 100vh;
+}
+
+/* .homecenter > p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,4 +23,4 @@
 
 p {
     margin-block-start: 0px;    
-}
+} */
