--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body, #app, #app>div {
+  height: 100%
+}
+
 body {
   margin: 0;
   /* align-items: center; */
@@ -10,6 +14,7 @@ body {
 
 html {
   height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   /* height: 80%;  */
   /* display: flex;  */
@@ -32,4 +37,8 @@ code {
   background: #1A181B;
   color: #564D65;
   /* background: #419be0; */
+}
+
+body > #root > div {
+  height: 100vh;
 }
